@@ -23,3 +23,4 @@ trigger-redstone: false
 extended-names: false
 detailed-output: true
 update-url: http://cfapi.lukegb.com/dl/physicalshop/
+showcase-mode: true
