@@ -1,3 +1,5 @@
+(4/16/12) - v9.1.0 - showcase
+- Added: Showcase! Your shop is now diamonds.
 (4/12/12) - v9.0.18 - tweak
 - Added: Sandstone data type handling
 (4/11/12) - v9.0.17 - output fix
